--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@ body {
 }
 
 #mainDiv {
-	
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 #mainDiv > p {
